--- a/sass/layout/mediaQuerry/_media768.scss
+++ b/sass/layout/mediaQuerry/_media768.scss
@@ -1,18 +1,7 @@
 @media (max-width: 768px){
-    .grid-zapatillas-pag{
-        .zapatilla-p{
-            height: 210px;
-        }
-    }
-    .grid-accesorios-pag{
-        .accesorio{
-            height: 210px;
-        }
-    }
-    .grid-ropa-pagina{
-        .ropa{
-            height: 210px;
-        }
+    .card-img-ropa{
+        height: 250px;
+        width: 100%;
     }
     .desktop{
         display: none;
