--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,14 @@
   padding: 20px;
 }
 
+.card-img-ropa {
+  height: 370px;
+  width: 100%;
+}
+
 .card {
   border-radius: 30px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
 }
 
 .card-body {
@@ -299,14 +304,9 @@ h3, h5 {
 }
 
 @media (max-width: 768px) and (max-width: 768px) {
-  .grid-zapatillas-pag .zapatilla-p {
-    height: 210px;
-  }
-  .grid-accesorios-pag .accesorio {
-    height: 210px;
-  }
-  .grid-ropa-pagina .ropa {
-    height: 210px;
+  .card-img-ropa {
+    height: 250px;
+    width: 100%;
   }
   .desktop {
     display: none;
@@ -331,30 +331,9 @@ h3, h5 {
   }
 }
 @media (max-width: 320px) and (max-width: 320px) {
-  .grid-zapatillas .content-images {
-    display: block;
-  }
-  .grid-zapatillas .zapatilla {
-    margin-bottom: 15px;
-  }
-  .grid-zapatillas-pag .content-images-p {
-    display: block;
-  }
-  .grid-zapatillas-pag .zapatilla-p {
-    margin-bottom: 15px;
-    height: 100%;
-  }
-  .grid-accesorios-pag .content-images-p {
-    display: block;
-  }
-  .grid-accesorios-pag .accesorio {
-    margin-bottom: 15px;
-  }
-  .grid-ropa-pagina .content-images-p {
-    display: block;
-  }
-  .grid-ropa-pagina .ropa {
-    margin-bottom: 15px;
+  .card-img-ropa {
+    height: 300px;
+    width: 100%;
   }
   .desktop {
     display: none;
