--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -10,9 +10,13 @@
     border-radius: 50px;
     padding: 20px;
 }
+.card-img-ropa{
+    height: 370px;
+    width: 100%;
+}
 .card{
     border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
 }
 .card-body{
     padding: 25px;
