--- a/sass/layout/mediaQuerry/_media768.scss
+++ b/sass/layout/mediaQuerry/_media768.scss
@@ -3,6 +3,9 @@
         height: 250px;
         width: 100%;
     }
+    .fondo-inicial{
+        background-image: url(../assets/img/fondo-ini/wallpaper-sneakers.jpeg);
+    }
     .desktop{
         display: none;
     }
