cambios de precios y diseños de botones

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
 }
 
 h3, h5 {
-  color: white;
+  color: rgb(12, 12, 12);
 }
 
 .boton {
@@ -309,7 +309,7 @@ h3, h5 {
     width: 100%;
   }
   .fondo-inicial {
-    background-image: url(../assets/img/fondo-ini/wallpaper-sneakers.jpeg);
+    background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
   }
   .desktop {
     display: none;
@@ -339,7 +339,7 @@ h3, h5 {
     width: 100%;
   }
   .fondo-inicial {
-    background-image: url(../assets/img/fondo-ini/wallpaper-sneakers.jpeg);
+    background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
   }
   .desktop {
     display: none;
