--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -1,5 +1,6 @@
 /*zapatillas index*/
 
+
 .titulo-zapatillas{
     text-align: center;
     font-size: 30px;
@@ -27,7 +28,7 @@
     border: none;
 }
 h3,h5{
-    color: white;
+    color: rgb(12, 12, 12);
 }
 
 .boton{
@@ -43,6 +44,7 @@ h3,h5{
     background-color: #B31312;
     color: white;
 }
+
 
 
 /*ropaindex*/
