--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -3,11 +3,15 @@
 
 .titulo-zapatillas{
     text-align: center;
+    margin-top: 4.375rem;
     font-size: 30px;
-    color: map-get($colores , color1 );
+    display: flex;
+    flex-direction: column;
+    color: map-get($colores, color1 );
+    font-family: 'Nike', sans-serif;
 }
 
-.card-img-top:hover{
+.card-img-top{
     border-radius: 50px;
     padding: 20px;
 }
@@ -19,6 +23,7 @@
     border-radius: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
 }
+
 .card-body{
     padding: 25px;
     margin-top: -15px;
