--- a/sass/layout/_main-ropa.scss
+++ b/sass/layout/_main-ropa.scss
@@ -2,10 +2,12 @@
 
 .titulo-ropa{
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 10px;
+    margin-top: 4.375rem;
     font-size: 30px;
-    color: map-get($colores , color1 );
+    display: flex;
+    flex-direction: column;
+    color: map-get($colores, color1 );
+    font-family: 'Nike', sans-serif;
 }
 
 .grid-ropa-pagina{
