cambios de contendo en card y flyer

--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -35,6 +35,9 @@
 h3,h5{
     color: rgb(12, 12, 12);
 }
+.card-title{
+    font-size: 20px;
+}
 
 .boton{
     border: 1px solid white;
@@ -49,6 +52,13 @@ h3,h5{
     background-color: #B31312;
     color: white;
 }
+.imagen-chica {
+    height: 550px;
+    width: 440px;
+    position: relative;
+    right: 11px;
+}
+
 
 
 
