--- a/sass/layout/mediaQuerry/_media320.scss
+++ b/sass/layout/mediaQuerry/_media320.scss
@@ -6,6 +6,12 @@
     .fondo-inicial{
         background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
     }
+    .imagen-chica {
+        height: 410px;
+        width: 300px;
+        right: 1px;
+        position: relative;
+    }
     .desktop{
         display: none;
     }
