--- a/sass/layout/mediaQuerry/_media768.scss
+++ b/sass/layout/mediaQuerry/_media768.scss
@@ -6,6 +6,15 @@
     .fondo-inicial{
         background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
     }
+    .imagen-chica {
+        height: 360px;
+        width: 250px;
+        right: 10px;
+        position: relative;
+    }
+    .card-title{
+        font-size: 15px;
+    }
     .desktop{
         display: none;
     }
