--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,10 @@
 @import "./layout/fondo-inicial";
 @import "./layout/bootstrap";
 
+@media (max-width: 1024px){
+    @import "./layout/mediaQuerry/media1024";
+}
+
 @media (max-width: 768px){
     @import "./layout/mediaQuerry/media768";
 }
@@ -24,5 +28,6 @@
 @media (max-width: 320px){
     @import "./layout/mediaQuerry/media320";
 }
+
 
 @import "./layout/footer";
