--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ h3, h5 {
   color: rgb(12, 12, 12);
 }
 
+.card-title {
+  font-size: 20px;
+}
+
 .boton {
   border: 1px solid white;
   padding: 15px 25px;
@@ -74,6 +78,13 @@ h3, h5 {
 .boton:hover {
   background-color: #B31312;
   color: white;
+}
+
+.imagen-chica {
+  height: 550px;
+  width: 440px;
+  position: relative;
+  right: 11px;
 }
 
 /*ropaindex*/
@@ -313,6 +324,14 @@ h3, h5 {
   cursor: pointer;
 }
 
+@media (max-width: 1024px) and (max-width: 1024px) {
+  .imagen-chica {
+    height: 430px;
+    width: 320px;
+    position: relative;
+    right: 10px;
+  }
+}
 @media (max-width: 768px) and (max-width: 768px) {
   .card-img-ropa {
     height: 250px;
@@ -320,6 +339,15 @@ h3, h5 {
   }
   .fondo-inicial {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
+  }
+  .imagen-chica {
+    height: 360px;
+    width: 250px;
+    right: 10px;
+    position: relative;
+  }
+  .card-title {
+    font-size: 15px;
   }
   .desktop {
     display: none;
@@ -350,6 +378,12 @@ h3, h5 {
   }
   .fondo-inicial {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
+  }
+  .imagen-chica {
+    height: 410px;
+    width: 300px;
+    right: 1px;
+    position: relative;
   }
   .desktop {
     display: none;
