--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,9 @@ h3, h5 {
 }
 
 .imagen-chica {
+  background-position: center;
+  width: 100%;
   height: 550px;
-  width: 440px;
-  position: relative;
-  right: 11px;
 }
 
 /*ropaindex*/
@@ -341,10 +340,8 @@ h3, h5 {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
   }
   .imagen-chica {
-    height: 360px;
+    height: 340px;
     width: 250px;
-    right: 10px;
-    position: relative;
   }
   .card-title {
     font-size: 15px;
@@ -380,10 +377,8 @@ h3, h5 {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
   }
   .imagen-chica {
-    height: 300px;
-    width: 300px;
-    right: 1px;
-    position: relative;
+    height: 340px;
+    width: 315px;
   }
   .desktop {
     display: none;
