--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -53,10 +53,9 @@ h3,h5{
     color: white;
 }
 .imagen-chica {
+    background-position: center;
+    width: 100%;
     height: 550px;
-    width: 440px;
-    position: relative;
-    right: 11px;
 }
 
 
