--- a/sass/layout/_main-accesorios.scss
+++ b/sass/layout/_main-accesorios.scss
@@ -30,4 +30,10 @@
         object-fit: contain;
     }
 }
+.imagen-accesorio{
+    width: 410px;
+    height: 500px;
+    position: relative;
+    top: 30px;
+}
 
