--- a/sass/layout/mediaQuerry/_media1024.scss
+++ b/sass/layout/mediaQuerry/_media1024.scss
@@ -1,8 +1,8 @@
 @media (max-width: 1024px){
-    .imagen-chica {
-        height: 430px;
-        width: 320px;
+    .imagen-accesorio {
+        width: 300px;
+        height: 400px;
         position: relative;
-        right: 10px;
+        top: 20px;
     }
 }
