--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,6 @@ h3, h5 {
   color: white;
 }
 
-.imagen-chica {
-  background-position: center;
-  width: 100%;
-  height: 550px;
-}
-
 /*ropaindex*/
 .grid-ropas, .grid-accesorios {
   display: flex;
@@ -245,6 +239,13 @@ h3, h5 {
   object-fit: contain;
 }
 
+.imagen-accesorio {
+  width: 410px;
+  height: 500px;
+  position: relative;
+  top: 30px;
+}
+
 /*formulario*/
 .form-register {
   width: 400px;
@@ -324,11 +325,11 @@ h3, h5 {
 }
 
 @media (max-width: 1024px) and (max-width: 1024px) {
-  .imagen-chica {
-    height: 430px;
-    width: 320px;
+  .imagen-accesorio {
+    width: 300px;
+    height: 400px;
     position: relative;
-    right: 10px;
+    top: 20px;
   }
 }
 @media (max-width: 768px) and (max-width: 768px) {
@@ -338,10 +339,6 @@ h3, h5 {
   }
   .fondo-inicial {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
-  }
-  .imagen-chica {
-    height: 340px;
-    width: 250px;
   }
   .card-title {
     font-size: 15px;
@@ -367,6 +364,28 @@ h3, h5 {
     position: relative;
     right: 4.6875rem;
   }
+  .imagen-accesorio {
+    width: 245px;
+    height: 326px;
+    position: relative;
+    top: 10px;
+  }
+}
+@media (max-width: 425px) and (max-width: 425px) {
+  .imagen-accesorio {
+    width: 395px;
+    height: 356px;
+    position: relative;
+    top: 10px;
+  }
+}
+@media (max-width: 375px) and (max-width: 375px) {
+  .imagen-accesorio {
+    width: 355px;
+    height: 356px;
+    position: relative;
+    top: 10px;
+  }
 }
 @media (max-width: 320px) and (max-width: 320px) {
   .card-img-ropa {
@@ -375,10 +394,6 @@ h3, h5 {
   }
   .fondo-inicial {
     background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
-  }
-  .imagen-chica {
-    height: 340px;
-    width: 315px;
   }
   .desktop {
     display: none;
@@ -400,6 +415,12 @@ h3, h5 {
     padding: 0 20px;
     position: relative;
     right: 4.6875rem;
+  }
+  .imagen-accesorio {
+    width: 295px;
+    height: 326px;
+    position: relative;
+    top: 10px;
   }
 }
 .pie-pagina {
