--- a/sass/layout/mediaQuerry/_media320.scss
+++ b/sass/layout/mediaQuerry/_media320.scss
@@ -6,10 +6,6 @@
     .fondo-inicial{
         background-image: url(../assets/img/fondo-ini/vestidor.jpeg);
     }
-    .imagen-chica{
-        height: 340px;
-        width: 315px;
-    }
     .desktop{
         display: none;
     }
@@ -30,6 +26,12 @@
         padding: 0 20px;
         position: relative;
         right: 4.6875rem;
+    }
+    .imagen-accesorio {
+        width: 295px;
+        height: 326px;
+        position: relative;
+        top: 10px;
     }
 }
 
