cambios de media res

--- a/sass/layout/_fondo-inicial.scss
+++ b/sass/layout/_fondo-inicial.scss
@@ -2,5 +2,6 @@
     background-color: rgb(247, 247, 247);
     height: 500px;
     background-image: url(../assets/img/fondo_inicial.jpg);
-    background-position: center;
+    background-size: cover;
+    background-position: 0% 50%;
 }
