--- a/css/style.css
+++ b/css/style.css
@@ -240,10 +240,11 @@ h3, h5 {
 }
 
 .imagen-accesorio {
-  width: 410px;
-  height: 500px;
-  position: relative;
-  top: 30px;
+  background-color: aqua;
+  height: 550px;
+  background-image: url(../assets/img/imagen-nike-ropa.jpg);
+  background-size: cover;
+  background-position: 0% 0%;
 }
 
 /*formulario*/
@@ -304,7 +305,8 @@ h3, h5 {
   background-color: rgb(247, 247, 247);
   height: 100%;
   height: 600px;
-  background-position: center;
+  background-size: cover;
+  background-position: 0% 80%;
   margin-top: 20px;
 }
 
@@ -312,7 +314,8 @@ h3, h5 {
   background-color: rgb(247, 247, 247);
   height: 500px;
   background-image: url(../assets/img/fondo_inicial.jpg);
-  background-position: center;
+  background-size: cover;
+  background-position: 0% 50%;
 }
 
 .boton-buscar {
@@ -324,14 +327,6 @@ h3, h5 {
   cursor: pointer;
 }
 
-@media (max-width: 1024px) and (max-width: 1024px) {
-  .imagen-accesorio {
-    width: 300px;
-    height: 400px;
-    position: relative;
-    top: 20px;
-  }
-}
 @media (max-width: 768px) and (max-width: 768px) {
   .card-img-ropa {
     height: 250px;
@@ -367,22 +362,6 @@ h3, h5 {
   .imagen-accesorio {
     width: 245px;
     height: 326px;
-    position: relative;
-    top: 10px;
-  }
-}
-@media (max-width: 425px) and (max-width: 425px) {
-  .imagen-accesorio {
-    width: 395px;
-    height: 356px;
-    position: relative;
-    top: 10px;
-  }
-}
-@media (max-width: 375px) and (max-width: 375px) {
-  .imagen-accesorio {
-    width: 355px;
-    height: 356px;
     position: relative;
     top: 10px;
   }
