--- a/sass/layout/_fondo-nike.scss
+++ b/sass/layout/_fondo-nike.scss
@@ -3,6 +3,7 @@
     background-color: rgb(247, 247, 247);
     height: 100%;
     height: 600px;
-    background-position: center;
+    background-size: cover;
+    background-position: 0% 80%;
     margin-top: 20px;
 }
