--- a/sass/layout/_main-accesorios.scss
+++ b/sass/layout/_main-accesorios.scss
@@ -31,9 +31,10 @@
     }
 }
 .imagen-accesorio{
-    width: 410px;
-    height: 500px;
-    position: relative;
-    top: 30px;
+background-color: aqua;
+height: 550px;
+background-image: url(../assets/img/imagen-nike-ropa.jpg);
+background-size: cover;
+background-position: 0% 0%;
 }
 
