--- a/sass/layout/_main-zapatillas.scss
+++ b/sass/layout/_main-zapatillas.scss
@@ -10,23 +10,16 @@
     font-family: 'Nike', sans-serif;
 }
 
-.grid-zapatillas-pag{
-    @include flex (center);
-    width: 100%;
-    padding: 0 10%;
-    margin: 50px 0;
-    .content-images-p{
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(3, 1fr);
-        width: 100%;
-        height: 100%;
-    }    
-    .zapatilla-p{
-        height:  100%;
-        background-color: map-get($colores, color2 );
-        border-radius: 20px;
-        box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-        width: 100%;
+.boton{
+    border: 1px solid white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 15px;
+    color: #B31312;
+    .boton:hover{
+        background-color: #B31312;
+        color: white;
     }
 }
