--- a/css/style.css
+++ b/css/style.css
@@ -32,37 +32,27 @@
   font-family: "Nike", sans-serif;
 }
 
-.card-img-top {
-  border-radius: 50px;
-  padding: 20px;
-}
-
-.card-img-ropa {
-  height: 370px;
-  width: 100%;
-}
-
-.card {
-  border-radius: 30px;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-}
-
 .card-body {
   padding: 25px;
   margin-top: -15px;
 }
-
-.btn-primary:hover {
+.card-body .card {
+  border-radius: 30px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+}
+.card-body .card-title {
+  font-size: 20px;
+}
+.card-body .card-img-top {
+  border-radius: 50px;
+  padding: 20px;
+}
+.card-body .btn-primary:hover {
   background-color: white;
   border: none;
 }
-
-h3, h5 {
+.card-body h3, .card-body h5 {
   color: rgb(12, 12, 12);
-}
-
-.card-title {
-  font-size: 20px;
 }
 
 .boton {
@@ -74,8 +64,7 @@ h3, h5 {
   border-radius: 15px;
   color: #B31312;
 }
-
-.boton:hover {
+.boton .boton:hover {
   background-color: #B31312;
   color: white;
 }
@@ -149,26 +138,18 @@ h3, h5 {
   font-family: "Nike", sans-serif;
 }
 
-.grid-zapatillas-pag {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  padding: 0 10%;
-  margin: 50px 0;
+.boton {
+  border: 1px solid white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 15px;
+  color: #B31312;
 }
-.grid-zapatillas-pag .content-images-p {
-  display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-  width: 100%;
-  height: 100%;
-}
-.grid-zapatillas-pag .zapatilla-p {
-  height: 100%;
-  background-color: #B2B0B0;
-  border-radius: 20px;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  width: 100%;
+.boton .boton:hover {
+  background-color: #B31312;
+  color: white;
 }
 
 /*ropa pag*/
@@ -182,27 +163,23 @@ h3, h5 {
   font-family: "Nike", sans-serif;
 }
 
-.grid-ropa-pagina {
-  display: flex;
-  justify-content: center;
+.card-img-ropa {
+  height: 370px;
   width: 100%;
-  padding: 0 10%;
-  margin: 50px 0;
 }
-.grid-ropa-pagina .content-images-p {
-  display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-  width: 100%;
-  height: 100%;
+
+.boton {
+  border: 1px solid white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 15px;
+  color: #B31312;
 }
-.grid-ropa-pagina .ropa, .grid-ropa-pagina .accesorio {
-  height: 300px;
-  width: 100%;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  object-fit: contain;
+.boton .boton:hover {
+  background-color: #B31312;
+  color: white;
 }
 
 /*accesorios pag*/
@@ -216,35 +193,18 @@ h3, h5 {
   font-family: "Nike", sans-serif;
 }
 
-.grid-accesorios-pag {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  padding: 0 10%;
-  margin: 50px 0;
+.boton {
+  border: 1px solid white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 15px;
+  color: #B31312;
 }
-.grid-accesorios-pag .content-images-p {
-  display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-  width: 100%;
-  height: 100%;
-}
-.grid-accesorios-pag .ropa, .grid-accesorios-pag .accesorio {
-  height: 300px;
-  width: 100%;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  object-fit: contain;
-}
-
-.imagen-accesorio {
-  background-color: aqua;
-  height: 550px;
-  background-image: url(../assets/img/imagen-nike-ropa.jpg);
-  background-size: cover;
-  background-position: 0% 0%;
+.boton .boton:hover {
+  background-color: #B31312;
+  color: white;
 }
 
 /*formulario*/
@@ -310,6 +270,33 @@ h3, h5 {
   margin-top: 20px;
 }
 
+.fondo-nike {
+  background-image: url(../assets/img/imagen-nike-ropa.jpg);
+  background-color: rgb(247, 247, 247);
+  height: 100%;
+  height: 350px;
+  background-size: contain;
+  margin-bottom: 20px;
+}
+
+.fondo-nike-2 {
+  background-image: url(../assets/img/imagen-nike-accesorios.jpg);
+  background-color: rgb(247, 247, 247);
+  height: 100%;
+  height: 350px;
+  background-size: contain;
+  margin-bottom: 20px;
+}
+
+.fondo-adidas {
+  background-image: url(../assets/img/fondo/adidas-1.jpg);
+  background-color: rgb(247, 247, 247);
+  height: 100%;
+  height: 350px;
+  background-size: contain;
+  margin-bottom: 20px;
+}
+
 .fondo-inicial {
   background-color: rgb(247, 247, 247);
   height: 500px;
@@ -359,12 +346,6 @@ h3, h5 {
     position: relative;
     right: 4.6875rem;
   }
-  .imagen-accesorio {
-    width: 245px;
-    height: 326px;
-    position: relative;
-    top: 10px;
-  }
 }
 @media (max-width: 320px) and (max-width: 320px) {
   .card-img-ropa {
@@ -394,12 +375,6 @@ h3, h5 {
     padding: 0 20px;
     position: relative;
     right: 4.6875rem;
-  }
-  .imagen-accesorio {
-    width: 295px;
-    height: 326px;
-    position: relative;
-    top: 10px;
   }
 }
 .pie-pagina {
