--- a/sass/layout/_fondo-nike.scss
+++ b/sass/layout/_fondo-nike.scss
@@ -7,3 +7,29 @@
     background-position: 0% 80%;
     margin-top: 20px;
 }
+
+.fondo-nike{
+    background-image: url(../assets/img/imagen-nike-ropa.jpg);
+    background-color: rgb(247, 247, 247);
+    height: 100%;
+    height: 350px;
+    background-size: contain;
+    margin-bottom: 20px;
+
+}
+.fondo-nike-2{
+    background-image: url(../assets/img/imagen-nike-accesorios.jpg);
+    background-color: rgb(247, 247, 247);
+    height: 100%;
+    height: 350px;
+    background-size: contain;
+    margin-bottom: 20px;
+}
+.fondo-adidas{
+    background-image: url(../assets/img/fondo/adidas-1.jpg);
+    background-color: rgb(247, 247, 247);
+    height: 100%;
+    height: 350px;
+    background-size: contain;
+    margin-bottom: 20px;
+}
