--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,17 @@
   color: white;
 }
 
+.leer-mas {
+  color: rgb(8, 8, 8);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.leer-mas:hover {
+  color: #B31312;
+}
+
 /*ropaindex*/
 .grid-ropas, .grid-accesorios {
   display: flex;
