--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -46,6 +46,15 @@
         color: white;
     }
 }
+.leer-mas {
+    color: rgb(8, 8, 8); 
+    text-decoration: none; 
+    font-weight: bold; 
+    font-size: 15px;
+}
+.leer-mas:hover{
+    color: #B31312
+}
 
 
 
