--- a/sass/layout/_main-accesorios.scss
+++ b/sass/layout/_main-accesorios.scss
@@ -1,11 +1,9 @@
 /*accesorios pag*/
 
 .titulo-accesorios{
-    text-align: center;
+    @include titulo;
     margin-top: 4.375rem;
     font-size: 30px;
-    display: flex;
-    flex-direction: column;
     color: map-get($colores, color1 );
     font-family: 'Nike', sans-serif;
 }
@@ -16,8 +14,8 @@
     text-decoration: none;
     display: inline-block;
     border-radius: 15px;
-    color: #B31312;
-    .boton:hover{
+    color: map-get($colores, color1 );
+    &:hover{
         background-color: #B31312;
         color: white;
     }
