--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -2,11 +2,9 @@
 
 
 .titulo-zapatillas{
-    text-align: center;
+    @include titulo;
     margin-top: 4.375rem;
     font-size: 30px;
-    display: flex;
-    flex-direction: column;
     color: map-get($colores, color1 );
     font-family: 'Nike', sans-serif;
 }
@@ -34,17 +32,13 @@
     }
 }
 .boton{
-    border: 1px solid white;
+    color: map-get($colores, color1 );
+    border: 1px solid rgb(224, 233, 224);
     padding: 15px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border-radius: 15px;
-    color: #B31312;
-    .boton:hover{
-        background-color: #B31312;
-        color: white;
-    }
 }
 .leer-mas {
     color: rgb(8, 8, 8); 
@@ -52,9 +46,7 @@
     font-weight: bold; 
     font-size: 15px;
 }
-.leer-mas:hover{
-    color: #B31312
-}
+
 
 
 
