--- a/sass/layout/_main-contactos.scss
+++ b/sass/layout/_main-contactos.scss
@@ -42,7 +42,7 @@
         color: white;
         text-decoration: none;
     }
-    a:hover {
+    &:hover {
         color: white;
         text-decoration: underline;
     }
