--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -2,3 +2,8 @@
     display: flex;
     justify-content: $justify;
 }
+@mixin titulo{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
